View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032155 | Open CASCADE | OCCT:Tests | public | 2021-02-22 18:38 | 2021-02-27 12:26 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032155: Tests - remove broken command OCC280 | ||||
Description | Several test cases are failing when using EGL: > testgrid bugs v3d bug280_2,bug280_3,bug349,bug349_1 The reason is OCC280 command performing an invalid operation - it sets existing windows to another View: An exception was caught 0x27da930 : Aspect_GraphicDeviceDefinitionError: OpenGl_Window, EGL is unable to create surface for window! | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32155 has been created by kgv. SHA-1: 4398ad17ce33fdd33b7133b245e5c3a4430bc3aa Detailed log of new commits: Author: kgv Date: Mon Feb 22 18:40:02 2021 +0300 0032155: Tests - remove broken command OCC280 Command OCC280 and a couple of useless tests have been removed. Test case bug349 has been updated to reproduce scenario using standard commands. |
|
Patch is ready for review - OCCT: branch CR32155. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32155-master-KGV-DESK/ http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32155-master-KGV-GLES/ |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2021-02-26 master SHA - bc0711a5c3c2c9a627834136e10b13a8564c5a00 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-02-26 SHA - 5c3782d3621ca4bd4a2339197c1c5cf352b51ac7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17811.770000000153 / 17875.850000000235 [-0.36%] Products Total CPU difference: 11543.6500000001 / 11549.600000000113 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 19344.3125 / 19351.640625 [-0.04%] Products Total CPU difference: 12900.578125 / 12845.234375 [+0.43%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32155 has been deleted by inv. SHA-1: 4398ad17ce33fdd33b7133b245e5c3a4430bc3aa |
occt: master 79d49683 2021-02-22 15:40:02 Committer: bugmaster Details Diff |
0032155: Tests - remove broken command OCC280 Command OCC280 and a couple of useless tests have been removed. Test case bug349 has been updated to reproduce scenario using standard commands. |
Affected Issues 0032155 |
|
mod - src/QABugs/QABugs_17.cxx | Diff File | ||
rm - tests/bugs/vis/bug280_2 | Diff File | ||
rm - tests/bugs/vis/bug280_3 | Diff File | ||
mod - tests/bugs/vis/bug349 | Diff File | ||
rm - tests/bugs/vis/bug349_1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-22 18:38 | kgv | New Issue | |
2021-02-22 18:38 | kgv | Assigned To | => kgv |
2021-02-22 18:38 | kgv | Relationship added | child of 0028098 |
2021-02-22 18:40 | git | Note Added: 0099097 | |
2021-02-22 20:02 | kgv | Note Added: 0099098 | |
2021-02-22 20:02 | kgv | Assigned To | kgv => osa |
2021-02-22 20:02 | kgv | Status | new => resolved |
2021-02-24 12:18 | osa | Note Added: 0099107 | |
2021-02-24 12:18 | osa | Assigned To | osa => bugmaster |
2021-02-24 12:18 | osa | Status | resolved => reviewed |
2021-02-27 11:49 | bugmaster | Note Added: 0099199 | |
2021-02-27 11:49 | bugmaster | Status | reviewed => tested |
2021-02-27 11:53 | bugmaster | Test case number | => Not required |
2021-02-27 11:59 | bugmaster | Changeset attached | => occt master 79d49683 |
2021-02-27 11:59 | bugmaster | Status | tested => verified |
2021-02-27 11:59 | bugmaster | Resolution | open => fixed |
2021-02-27 12:26 | git | Note Added: 0099213 |